小遊戲 改很多 羅素跟音樂跟字 哦！迪士尼也改掉惹

--- a/logogame/webgame.html
+++ b/logogame/webgame.html
@@ -34,7 +34,15 @@
         <button class="init-page__btn btn">Start</button>
     </div>
 </div>
-
+     <audio id="dis">
+                <source = src="DIS.mp3" type="audio/mp3">
+                </audio> 
+    <audio id="mcd">
+                <source = src="MCD.mp3" type="audio/mp3">
+                </audio>
+    <audio id="intc">
+                <source = src="INTC.mp3" type="audio/mp3">
+                </audio>
 <div class="questions-page">
      <audio id="correct">
                 <source  src="correct.mp3" type="audio/mp3">
