--- a/gamecard/rank.html
+++ b/gamecard/rank.html
@@ -102,13 +102,13 @@
                         </tr>
                         <tr class="list__row" >
                             <td class="list__cell"><span class="list__value">2</span></td>
-                            <td class="list__cell"><span class="list__value">陳僥</span><small class="list__label">應經系</small></td>
+                            <td class="list__cell"><span class="list__value">陳嶢</span><small class="list__label">應經系</small></td>
                             <td class="list__cell"><img class="rankimg" src="aa/%E6%87%89%E7%B6%93%E7%BE%8A.png"></td>
                             <td class="list__cell"><span class="list__value">100</span><small class="list__label">Points</small></td>
                         </tr>
                         <tr class="list__row" >
                             <td class="list__cell"><span class="list__value">3</span></td>
-                            <td class="list__cell"><span class="list__value">聆恩</span><small class="list__label">機械系</small></td>
+                            <td class="list__cell"><span class="list__value">黃聆恩</span><small class="list__label">機械系</small></td>
                             <td class="list__cell"><img class="rankimg" src="aa/%E6%A9%9F%E6%A2%B0%E7%BE%8A.png" ></td>
                             <td class="list__cell"><span class="list__value">80</span><small class="list__label">Points</small></td>
                         </tr>
@@ -126,8 +126,8 @@
                         </tr>
                         <tr class="list__row" >
                             <td class="list__cell"><span class="list__value">6</span></td>
-                            <td class="list__cell"><span class="list__value">唐唐</span><small class="list__label">資工系</small></td>
-                            <td class="list__cell"><img class="rankimg" src="aa/happy.png" ></td>
+                            <td class="list__cell"><span class="list__value">培昕</span><small class="list__label">森林系</small></td>
+                            <td class="list__cell"><img class="rankimg" src="aa/shocksheep.png" ></td>
                             <td class="list__cell"><span class="list__value">60</span><small class="list__label">Points</small></td>
                         </tr>
                         <tr class="list__row" >
@@ -135,6 +135,12 @@
                             <td class="list__cell"><span class="list__value">佳靜</span><small class="list__label">數學系</small></td>
                               <td class="list__cell"><img class="rankimg" src="aa/best.png" ></td>
                             <td class="list__cell"><span class="list__value">60</span><small class="list__label">Points</small></td>
+                        </tr>
+                          <tr class="list__row" >
+                            <td class="list__cell"><span class="list__value">8</span></td>
+                            <td class="list__cell"><span class="list__value">唐唐</span><small class="list__label">資工系</small></td>
+                            <td class="list__cell"><img class="rankimg" src="aa/happy.png" ></td>
+                            <td class="list__cell"><span class="list__value">20</span><small class="list__label">Points</small></td>
                         </tr>
                        
                     </table>
