--- a/logogame/concept.html
+++ b/logogame/concept.html
@@ -18,7 +18,7 @@
 <body>
       <div class="topp"> 
     <ul>
-    <li><a href="./webgame.html" class="goto">DJI30 Quiz</a></li>
+    <li><a href="./webgame.html" class="goto">US Stocks Quiz</a></li>
     <li><a href="../gamecard/rank.html" class="goto" >RANK</a></li>
     <li><a href="../qts&game/game.html" class="goto" >COMPARE GAME</a></li>
     </ul>       
