改掉咩噗歌跟確認tab bar

--- a/gamecard/ruby_card.html
+++ b/gamecard/ruby_card.html
@@ -51,7 +51,7 @@
 
                         <a class="menu_item" href="../market&mf&news/news.html">News</a>
                         <a class="menu_item" href="ruby_card.html">Game</a>
-                        <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">蔡易彤</a>
+                        <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">唐建恆</a>
                     </nav>
                 </div>
             </header>
