--- a/market&mf&news/news.html
+++ b/market&mf&news/news.html
@@ -49,7 +49,7 @@
                         <a></a>
                         <a class="menu_item" href="news.html">News</a>
                         <a class="menu_item" href="../gamecard/ruby_card.html">Game</a>
-                        <a class="btn_gold shadow menu_btn_gold" href="login.html" id="name">Login</a>
+                        <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">Login</a>
                     </nav>
                     </div>
             </header>
