ㄐㄅ 沒改到可龍的bar

--- a/market&mf&news/favorite_chart.html
+++ b/market&mf&news/favorite_chart.html
@@ -61,7 +61,7 @@
                         <a></a>
                         <a class="menu_item" href="news.html">News</a>
                         <a class="menu_item" href="../gamecard/ruby_card.html">Game</a>
-                        <a class="btn_gold shadow menu_btn_gold" href="login.html" id="name">羅述慈</a>
+                        <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">唐建恆</a>
                     </nav>
                 </div>
             </header>
