--- a/login.html
+++ b/login.html
@@ -179,7 +179,7 @@
                         //FB_justify_showMess(response.name);
                     });
                     // window.location = 'https://rorubyy.github.io/ruby/dawho';
-                    window.setTimeout("window.location='https://rorubyy.github.io/ruby/index.html'", 3000);
+                    window.setTimeout("window.location='https://lingenhuang.github.io/WinTheJackpot/index.html'", 3000);
                     //alert("成功用Facebook帳號登入");
 
 
@@ -395,7 +395,7 @@
                     //window.localStorage.setItem("googlename", profile.getName());
                     $.cookie('googlename',profile.getName());
                     console.log(profile.getName());
-                    window.setTimeout("window.location='https://jean870809.github.io/ruby/index.html'", 3000);
+                    window.setTimeout("window.location='https://lingenhuang.github.io/WinTheJackpot/index.html'", 3000);
                 },
                 function (error) {
                     // Error occurred
