--- a/logogame/webgame.html
+++ b/logogame/webgame.html
@@ -43,6 +43,9 @@
     <audio id="intc">
                 <source = src="INTC.mp3" type="audio/mp3">
                 </audio>
+     <audio id="msft">
+                <source = src="MSFT.mp3" type="audio/mp3">
+                </audio>
 <div class="questions-page">
      <audio id="correct">
                 <source  src="correct.mp3" type="audio/mp3">
