change login name and logogame mcsf

--- a/gamecard/rank.html
+++ b/gamecard/rank.html
@@ -63,7 +63,7 @@
                             <a></a>
                             <a class="menu_item" href="../market&mf&news/news.html">News</a>
                             <a class="menu_item" href="ruby_card.html">Game</a>
-                            <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">唐建恆</a>
+                            <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">Ruby</a>
                         </nav>
                 </div>
             </header>
@@ -108,14 +108,14 @@
                         </tr>
                         <tr class="list__row" >
                             <td class="list__cell"><span class="list__value">3</span></td>
-                            <td class="list__cell"><span class="list__value">黃聆恩</span><small class="list__label">機械系</small></td>
-                            <td class="list__cell"><img class="rankimg" src="aa/%E6%A9%9F%E6%A2%B0%E7%BE%8A.png" ></td>
-                            <td class="list__cell"><span class="list__value">80</span><small class="list__label">Points</small></td>
+                            <td class="list__cell"><span class="list__value">Ruby</span><small class="list__label">生科系</small></td>
+                            <td class="list__cell"><img class="rankimg" src="aa/%E5%8C%96%E5%AD%B8%E7%BE%8A.png" ></td>
+                            <td class="list__cell"><span class="list__value">100</span><small class="list__label">Points</small></td>
                         </tr>
                         <tr class="list__row">
                             <td class="list__cell"><span class="list__value">4</span></td>
-                            <td class="list__cell"><span class="list__value">羅述慈</span><small class="list__label">生科系</small></td>
-                            <td class="list__cell"><img class="rankimg" src="aa/%E5%8C%96%E5%AD%B8%E7%BE%8A.png" ></td>
+                            <td class="list__cell"><span class="list__value">黃聆恩</span><small class="list__label">機械系</small></td>
+                            <td class="list__cell"><img class="rankimg" src="aa/%E6%A9%9F%E6%A2%B0%E7%BE%8A.png" ></td>
                             <td class="list__cell"><span class="list__value">80</span><small class="list__label">Points</small></td>
                         </tr>
                         <tr class="list__row">
