--- a/market&mf&news/myfavorite_edit.html
+++ b/market&mf&news/myfavorite_edit.html
@@ -116,7 +116,7 @@
                         <a></a>
                         <a class="menu_item" href="news.html">News</a>
                         <a class="menu_item" href="../gamecard/ruby_card.html">Game</a>
-                        <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">唐建恆</a>
+                        <a class="btn_gold shadow menu_btn_gold" href="../login.html" id="name">Ruby</a>
                     </nav>
                 </div>
             </header>
